--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -2,8 +2,9 @@
 log4j.rootLogger=INFO,Console,File  
 
 ### because this use spring jdbc , so log4j is that , if use ibatis or hibernate can google ### 
-log4j.logger.org.springframework.jdbc.core=DEBUG
+log4j.logger.org.springframework.jdbc=DEBUG
 log4j.logger.org.springframework.jdbc.core.StatementCreatorUtils=Console
+log4j.logger.org.springframework.transaction=DEBUG
 
 ###### Console appender definition #######  
   
