--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/baobaotao/service/UserService.java=UTF-8
+encoding//src/quartz.properties=UTF-8
 encoding/<project>=UTF-8
